// Copyright 2023 iLogtail Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

//package io.pyroscope.labels.pb;
option go_package = "github.com/pyroscope-io/pyroscope/pkg/convert/jfr";

message Context {
  map<int64, int64> labels = 1;
}
message LabelsSnapshot {
  map<int64, Context> contexts = 1;
  map<int64, string> strings = 2;
}
